# feather

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  Containerfile  Dockerfile  LICENSE  README.md  ROADMAP.md  boxes.example.json  boxes.json  build.sh  deploy.sh  index.html  package-lock.json  package.json  playwright.config.js  quick-links.json  remote-server.js  run.sh  server.js  sharing.example.json  update.sh  version.json
autoweb-tests/: run-tests.sh  test-admin-auto-refresh.sh  test-admin-build-date-tooltip.sh  test-admin-copy-restart-cmd.sh  test-admin-copy-service-name.sh  test-admin-enter-activate.sh  test-admin-escape-closes-shortcuts.sh  test-admin-filter-clear-btn.sh  test-admin-filter-counts-flapping.sh  test-admin-filter-empty-state.sh  test-admin-filter-keyboard.sh  test-admin-filter-reapply.sh  test-admin-filter-summary.sh  test-admin-filter-uses-button.sh  test-admin-flapping-service.sh  test-admin-gg-navigation.sh  test-admin-jk-navigation.sh  test-admin-refresh-keyboard.sh  test-admin-service-filter.sh  test-admin-services-2col.sh  test-admin-services-grid.sh  test-admin-services-sort.sh  test-admin-services-summary.sh  test-admin-shortcuts-panel.sh  test-admin-sse-pulse.sh  test-admin-start-cmd-stopped.sh  test-admin-stopped-filter-btn.sh  test-admin-stopped-filter-flapping.sh  test-admin-stopped-filter-keyboard.sh  test-admin-stopped-filter-reapply-refresh.sh  test-admin-stopped-filter-reset-on-text.sh  test-admin-stopped-filter-summary.sh  test-admin-tail-cmd.sh  test-admin-timago-weeks-months.sh  test-admin-title-badge.sh  test-autoweb-button.sh  (+207 more)
(+487 files in other folders)
